# teianbot

./: Cargo.toml  Dockerfile  README.md  package.json  start.sh
linux/: start.sh  teianbot.service
migration/: Cargo.toml
migration/src/: lib.rs  m20240405_162109_create_table_users.rs  m20240405_162252_create_table_channels.rs  m20240405_162253_create_table_inout.rs  m20240405_170313_create_table_chat.rs
prisma/: schema.prisma
prisma/migrations/20230926170502_init/: migration.sql
prisma/migrations/20230926192509_discord/: migration.sql
prisma/migrations/20231003134457_add_table_chat/: migration.sql
prisma/migrations/20231003143220_add_column_pair_in_inout/: migration.sql
src/: db.rs  index.ts  lib.rs  main.rs  main.ts
src/commands/: body.rs  hello.rs  index.ts  mod.rs  team.ts  test.ts  type.ts
src/entities/: channel.rs  chat.rs  inout.rs  mod.rs  prelude.rs  user.rs
src/event/: message.rs  mod.rs  voice_state_update.rs
src/lib/: setup.ts
src/listeners/: voiceStateUpdate.ts
