[package]
name = "teianbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.6.1"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
shuttle-runtime = "0.43.0"
shuttle-serenity = "0.43.0"
anyhow = "1.0.81"
futures = "0.3.28"
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
chrono = "0.4.37"
dotenv = "0.15.0"
